# ouch-wm

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/window/: mod.rs  window_type.rs
