[package]
name = "ouch-wm"
version = "0.1.0"
edition = "2024"

[lib]
name = "app_lib"

[dependencies]
ratatui = {version = "0.30.0-alpha.1", features = ["all-widgets"]}
crossterm = {version = "0.28.1", features = ["event-stream", "events"]}
futures = "0.3.31"
tokio = {version = "1.43.0", features = ["full"]}
anyhow = "1.0.96"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"